activate integration tests again

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "deploy-production": "netlify deploy -p dist -s $NETLIFY_ID -t $NETLIFY_TOKEN",
     "deploy-integration": "netlify deploy -p dist -s $INTEGRATION_NETLIFY_ID -t $INTEGRATION_NETLIFY_TOKEN",
     "download-schema": "node build/downloadSchema.js",
-    "deploy": "npm run pre-deploy && npm run deploy-integration && npm run deploy-production",
+    "deploy": "npm run pre-deploy && npm run deploy-integration && npm run test-integration && npm run deploy-production",
     "lint": "tslint \"src/**/*.ts{,x}\"",
     "start": "GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack-dev-server --hot --profile --history-api-fallback --host 0.0.0.0 --port 4000 --content-base dll/",
     "test": "npm run lint && jest",
     "test-quick": "jest",
     "test-watch": "jest --watch",
-    "test-integration": "cd integration-tests && tsc && ava dist/test.js",
+    "test-integration": "cd integration-tests && tsc && ava --serial dist/test.js",
     "dll": "webpack --config dll.webpack.config.js",
     "analyze": "source-map-explorer dist/app.*"
   },
