--- a/circle.yml
+++ b/circle.yml
@@ -23,7 +23,7 @@ deployment:
             AUTH0_CLIENT_ID: Is37aESHkLDR5PQa48ZiKZtm8gVNiUWw
             NETLIFY_ID: console-graph-cool
             INTEGRATION_NETLIFY_ID: graphcool-console-staging-prod
-            INTEGRATION_URL: https://staging-prod.console.graph.cool/
+            INTEGRATION_URL: https://staging-prod.console.graph.cool
             GA_CODE: UA-74131346-2
             METRICS_ENDPOINT: $METRICS_ENDPOINT_MASTER
             SUBSCRIPTIONS_EU_WEST_1: wss://subscriptions.graph.cool
@@ -41,7 +41,7 @@ deployment:
             AUTH0_CLIENT_ID: 2q6oEEGaIPv45R7v60ZMnkfAgY49pNnm
             NETLIFY_ID: dev-console-graph-cool
             INTEGRATION_NETLIFY_ID: graphcool-console-staging-dev
-            INTEGRATION_URL: https://staging-dev.console.graph.cool/
+            INTEGRATION_URL: https://staging-dev.console.graph.cool
             SUBSCRIPTIONS_EU_WEST_1: wss://dev.subscriptions.graph.cool
             SUBSCRIPTIONS_US_WEST_2: wss://dev.subscriptions.us-west-2.graph.cool
             SUBSCRIPTIONS_AP_NORTHEAST_1: wss://dev.subscriptions.ap-northeast-1.graph.cool
