--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "graphcool-styles": "0.1.23",
     "graphiql": "^0.8.0",
     "graphql": "0.8.2",
+    "graphql-request": "^1.3.3",
     "graphql-voyager": "git+https://github.com/timsuchanek/graphql-voyager#build5",
     "happypack": "^3.1.0",
     "immutable": "^3.8.1",
