hack for jest tests

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "deploy": "npm run pre-deploy && npm run deploy-integration && npm run test-integration && npm run deploy-production",
     "lint": "tslint \"src/**/*.ts{,x}\"",
     "start": "GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack-dev-server --hot --profile --history-api-fallback --host 0.0.0.0 --port 4000 --content-base dll/",
-    "test": "npm run lint && jest",
-    "test-quick": "jest",
+    "test": "NODE_ENV=test npm run lint && jest",
+    "test-quick": "NODE_ENV=test jest",
     "test-watch": "jest --watch",
     "test-integration": "cd integration-tests && tsc && ava --serial dist/test.js",
     "dll": "webpack --config dll.webpack.config.js",
