--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "analyze": "source-map-explorer dist/app.*",
     "watch-relay-compiler": "relay-compiler --watch --transform relay-compiler-typescript --schema ./build/schema.graphql --src ./src --extensions ts tsx js jsx",
     "relay-compiler": "relay-compiler --transform relay-compiler-typescript --schema ./build/schema.graphql --src ./src --extensions ts tsx js jsx",
-    "prettier": "prettier --single-quote --no-semi --trailing-comma all --write --write '*.{ts,tsx}' 'src/views/ProjectRootView/EndpointPopup.tsx'"
+    "prettier": "prettier --single-quote --no-semi --trailing-comma all --write --write '*.{ts,tsx}' 'src/views/ProjectRootView/EndpointPopup.tsx'",
+    "tsc": "tsc"
   },
   "pre-push": [
     "test-quick"
@@ -57,23 +58,23 @@
     ]
   },
   "dependencies": {
-    "@types/bluebird": "^3.0.35",
-    "@types/classnames": "^0.0.32",
-    "@types/cuid": "0.0.30",
-    "@types/enzyme": "^2.7.1",
-    "@types/history": "^2.0.39",
-    "@types/lodash": "4.14.43",
-    "@types/node": "^6.0.31",
-    "@types/react": "git+https://github.com/timsuchanek/-types-react",
-    "@types/react-addons-pure-render-mixin": "^0.14.13",
-    "@types/react-codemirror": "^0.2.5",
-    "@types/react-dom": "^0.14.14",
-    "@types/react-ga": "^1.4.5",
-    "@types/react-modal": "^1.6.1",
-    "@types/react-router": "^2.0.36",
+    "@types/bluebird": "^3.5.8",
+    "@types/classnames": "^2.2.0",
+    "@types/cuid": "^1.3.0",
+    "@types/enzyme": "^2.8.4",
+    "@types/history": "^4.6.0",
+    "@types/lodash": "^4.14.71",
+    "@types/node": "^8.0.19",
+    "@types/react": "^16.0.0",
+    "@types/react-addons-pure-render-mixin": "^0.14.17",
+    "@types/react-codemirror": "^0.2.7",
+    "@types/react-dom": "^15.5.1",
+    "@types/react-ga": "^2.1.1",
+    "@types/react-modal": "^1.6.8",
+    "@types/react-router": "^4.0.14",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "2.1.32",
-    "@types/whatwg-fetch": "^0.0.32",
+    "@types/whatwg-fetch": "^0.0.33",
     "auth0-lock": "^10.17.0",
     "ava": "^0.19.1",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
@@ -92,7 +93,7 @@
     "faker": "^4.1.0",
     "farce": "^0.2.1",
     "file-saver": "^1.3.3",
-    "found": "next",
+    "found": "0.3.3",
     "found-relay": "git+https://github.com/timsuchanek/found-relay",
     "graphcool-graphiql": "^1.8.3",
     "graphcool-metrics": "0.2.5",
@@ -165,8 +166,8 @@
     "webpack-bundle-analyzer": "^2.3.1"
   },
   "devDependencies": {
-    "@types/jest": "^15.1.32",
-    "@types/react-addons-test-utils": "^0.14.15",
+    "@types/jest": "^20.0.5",
+    "@types/react-addons-test-utils": "^0.14.19",
     "awesome-typescript-loader": "3.0.0-beta.17",
     "babel-cli": "^6.11.4",
     "babel-jest": "^14.0.0",
@@ -209,11 +210,11 @@
     "source-map-explorer": "^1.3.3",
     "style-loader": "^0.13.1",
     "svgo-loader": "^1.1.0",
-    "tslint": "5.3.2",
+    "tslint": "^5.5.0",
     "tslint-config-standard": "^2.0.0",
     "tslint-graphcool-frontend": "^0.0.3",
     "tslint-loader": "^3.0.0",
-    "typescript": "2.1.5",
+    "typescript": "^2.4.2",
     "url-loader": "^0.5.7",
     "webpack": "2.3.1",
     "webpack-dev-server": "2.4.5",
