--- a/circle.yml
+++ b/circle.yml
@@ -30,7 +30,7 @@ deployment:
             AUTH0_CLIENT_ID: Is37aESHkLDR5PQa48ZiKZtm8gVNiUWw
             NETLIFY_ID: console-graph-cool
             INTEGRATION_NETLIFY_ID: graphcool-console-staging-prod
-            INTEGRATION_URL: https://staging-dev.console.graph.cool
+            INTEGRATION_URL: https://staging-prod.console.graph.cool
             GA_CODE: UA-74131346-2
             METRICS_ENDPOINT: $METRICS_ENDPOINT_MASTER
             SUBSCRIPTIONS_EU_WEST_1: wss://subscriptions.graph.cool
