--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "download-schema": "node build/downloadSchema.js",
     "deploy": "npm run pre-deploy && npm run deploy-integration && npm run deploy-production",
     "lint": "tslint \"src/**/*.ts{,x}\"",
+    "lint-fix": "tslint --fix \"src/**/*.ts{,x}\"",
     "start": "GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack-dev-server --hot --profile --history-api-fallback --host 0.0.0.0 --port 4000 --content-base dll/",
     "test": "NODE_ENV=test npm run lint && jest",
     "test-quick": "NODE_ENV=test jest",
