--- a/package.json
+++ b/package.json
@@ -190,9 +190,11 @@
     "file-loader": "^0.9.0",
     "fork-ts-checker-webpack-plugin": "^0.1.5",
     "html-webpack-plugin": "^2.22.0",
+    "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest-cli": "^16.0.1",
     "json-loader": "^0.5.4",
+    "lint-staged": "^4.0.2",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cli": "^1.0.3",
     "nock": "^8.1.0",
