--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "build": "npm run relay-compiler; rm -rf dist && NODE_ENV=production GRAPHQL_ENDPOINT=$BACKEND_ADDR/system webpack --config webpack.config.build.js -p && cp -r static/* dist",
+    "build": "npm run relay-compiler; rm -rf dist && NODE_ENV=production GRAPHQL_ENDPOINT=$BACKEND_ADDR/system node --max-old-space-size=8192 node_modules/.bin/webpack --config webpack.config.build.js -p && cp -r static/* dist",
     "pre-deploy": "npm run dll && npm run build && cp dll/vendor.bundle.js dist/vendor.bundle.js && cp dist/index.html dist/200.html ",
     "deploy-production": "netlify deploy -p dist -s $NETLIFY_ID -t $NETLIFY_TOKEN",
     "deploy-integration": "netlify deploy -p dist -s $INTEGRATION_NETLIFY_ID -t $INTEGRATION_NETLIFY_TOKEN",
@@ -62,7 +62,6 @@
   "dependencies": {
     "@types/bluebird": "^3.5.8",
     "@types/classnames": "^2.2.0",
-    "@types/cuid": "^1.3.0",
     "@types/enzyme": "^2.8.4",
     "@types/history": "^4.6.0",
     "@types/lodash": "^4.14.71",
@@ -218,8 +217,9 @@
     "tslint-loader": "^3.0.0",
     "typescript": "^2.4.2",
     "url-loader": "^0.5.7",
-    "webpack": "2.3.1",
-    "webpack-dev-server": "2.4.5",
+    "webpack": "^3.4.1",
+    "webpack-common-shake": "^1.5.3",
+    "webpack-dev-server": "^2.6.1",
     "webpack-uglify-parallel": "^0.1.3"
   }
 }
