Closes ui-feedback#56

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/react-dom": "^15.5.1",
     "@types/react-ga": "^2.1.1",
     "@types/react-modal": "^1.6.8",
+    "@types/react-notification-system": "^0.2.35",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "2.1.32",
     "auth0-lock": "^10.17.0",
@@ -134,7 +135,7 @@
     "react-helmet": "^3.1.0",
     "react-input-enhancements": "git+https://github.com/timsuchanek/react-input-enhancements#build",
     "react-modal": "^1.6.5",
-    "react-notification-system": "^0.2.7",
+    "react-notification-system": "^0.2.15",
     "react-redux": "5.0.3",
     "react-relay": "git+https://github.com/timsuchanek/react-relay#build1",
     "react-resizable": "^1.6.0",
