--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
     "react-dropzone": "^3.12.2",
     "react-ga": "^2.1.2",
     "react-helmet": "^3.1.0",
-    "react-input-enhancements": "git+https://github.com/timsuchanek/react-input-enhancements#build",
+    "react-input-enhancements": "git+https://github.com/timsuchanek/react-input-enhancements#build-4",
     "react-modal": "^1.6.5",
     "react-notification-system": "^0.2.15",
     "react-redux": "5.0.3",
