--- a/circle.yml
+++ b/circle.yml
@@ -18,7 +18,7 @@ dependencies:
 test:
   override:
     - npm test
-    - npm test-integration
+    - npm run test-integration
 
 deployment:
   master:
