--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "happypack": "^3.1.0",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
+    "jszip": "^3.1.4",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.2",
     "lokka": "^1.7.0",
