--- a/circle.yml
+++ b/circle.yml
@@ -10,9 +10,13 @@ dependencies:
     - cd watchman && sudo make install
     - sudo sysctl fs.inotify.max_user_watches=524288
     - sudo sysctl -p
+    - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+    - echo "deb http://nightly.yarnpkg.com/debian/ nightly main" | sudo tee /etc/apt/sources.list.d/yarn-nightly.list
+    - sudo apt-get update && sudo apt-get install yarn
   override:
     - rm -rf node_modules
-    - npm install
+    - npm install -g yarn
+    - yarn install
 
 test:
   override:
